--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,193 +1,15 @@
-$color-primary: #55c57a;
-$color-primary-light: #7ed56f;
-$color-primary-dark: #28b485;
+@import './abstracts/functions';
+@import './abstracts/mixins';
+@import './abstracts/variables';
 
-$color-grey-dark: #777;
-$color-white: #fff;
-$color-black: #000;
+@import './base/base';
+@import './base/animations';
+@import './base/typography';
+@import './base/utilities';
 
-*,
-*::after,
-*::before {
-  margin: 0;
-  padding: 0;
-  box-sizing: inherit;
-}
+@import './components/button';
 
+@import './layout/header';
 
-html {
-  font-size: 62.5%;
-}
-
-body {
-  font-family: -apple-system, "Noto Sans", "Helvetica Neue", Helvetica, "Nimbus Sans L", Arial, "Liberation Sans", "PingFang SC", "Hiragino Sans GB", "Noto Sans CJK SC", "Source Han Sans SC", "Source Han Sans CN", "Microsoft YaHei", "Wenquanyi Micro Hei", "WenQuanYi Zen Hei", "ST Heiti", SimHei, "WenQuanYi Zen Hei Sharp", sans-serif;
-  font-weight: 400;
-  /*font-size: 16px;*/
-  line-height: 1.7;
-  color: #777;
-  padding: 30px;
-  box-sizing: border-box;
-}
-
-.header {
-  height: 95vh;
-  background-image: linear-gradient(
-                  to right bottom,
-                  rgba($color-primary-light, 0.8),
-                  rgba($color-primary-dark, 0.8)),
-  url(../img/mola-pc.jpg);
-  background-size: cover;
-  background-position: top;
-  clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
-
-  &__logo-box {
-    position: absolute;
-    top: 4rem;
-    left: 5rem;
-  }
-
-  &__logo {
-    height: 3.5rem;
-  }
-
-  &__text-box {
-    position: absolute;
-    top: 40%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    text-align: center;
-
-    .heading-primary {
-      color: $color-white;
-      text-transform: uppercase;
-
-      backface-visibility: hidden;
-      margin-bottom: 6rem;
-
-
-      &--main {
-        display: block;
-        font-size: 6rem;
-        font-weight: 700;
-        letter-spacing: 3.5rem;
-
-        animation-name: moveInLeft;
-        animation-duration: 3s;
-        animation-timing-function: ease-out;
-        /*
-        animation-iteration-count: 3;//动画重复
-        animation-delay: 2s;//动画延迟
-        */
-      }
-
-      &--sub {
-        display: block;
-        font-size: 2rem;
-        font-weight: 700;
-        letter-spacing: 1.7rem;
-
-        animation: moveInRight 3s ease-out;
-      }
-    }
-
-    .btn {
-      &:link,
-      &:visited{
-        font-size: 1.6rem;
-        text-transform: uppercase;
-        text-decoration: none;
-        display: inline-block;
-        padding: 1.5rem 4rem;
-        border-radius: 10rem;
-        transition: all .2s;
-        position: relative;
-      }
-
-      &::after {
-        content: '';
-        display: inline-block;
-        height: 100%;
-        width: 100%;
-        border-radius: 10rem;
-        position: absolute;
-        top: 0;
-        left: 0;
-        z-index: -1;
-        transition: all .4s;
-      }
-
-      &:hover{
-        transform: translateY(-0.3rem);
-        box-shadow: 0 1rem 2rem rgba($color-black, 0.2);
-        &::after{
-          transform: scaleX(1.4) scaleY(1.6);
-          opacity: 0;
-        }
-      }
-
-      &:active {
-        transform: translateY(-0.1rem);
-        box-shadow: 0 0.5rem 1rem rgba($color-black, 0.2)
-      }
-
-      &--white {
-        background-color: $color-white;
-        color: $color-grey-dark;
-        &::after{
-          background-color: $color-white;
-        }
-      }
-
-      .&--animated {
-        animation: moveInBottom .5s ease-out .75s;
-        animation-fill-mode: backwards;
-      }
-    }
-  }
-}
-
-
-@keyframes moveInLeft {
-  0% {
-    opacity: 0;
-    transform: translateX(-10rem);
-  }
-
-  80% {
-    transform: translateX(1rem);
-  }
-
-  100% {
-    opacity: 1;
-    transform: translate(0)
-  }
-}
-
-@keyframes moveInRight {
-  0% {
-    opacity: 0;
-    transform: translateX(10rem);
-  }
-
-  80% {
-    transform: translateX(-1rem);
-  }
-
-  100% {
-    opacity: 1;
-    transform: translate(0)
-  }
-}
-
-@keyframes moveInBottom {
-  0% {
-    opacity: 0;
-    transform: translateY(3rem);
-  }
-
-  100% {
-    opacity: 1;
-    transform: translate(0)
-  }
-}
+@import './pages/home';
 
