--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -69,12 +69,12 @@
   &:hover{
     background-color: $color-primary;
     color:$color-white;
-    box-shadow:0 1rem 2rem rgba($color-black, .15);
+    box-shadow:0 1rem 2rem $shadow-black-1;
     transform: translateY(-2px);
   }
 
   &:active{
-    box-shadow:0 .5rem 1rem rgba($color-black, .15);
+    box-shadow:0 .5rem 1rem $shadow-black-1;
     transform: translateY(0);
   }
 }
