--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -2,16 +2,13 @@
   perspective:150rem;
   -moz-perspective:150rem;
   position: relative;
-  height:50rem;
+  height:52rem;
 
   &__side {
     color: $color-black;
     font-size: 2rem;
-    height:50rem;
+    height:52rem;
     transition: all .8s ease;
-    position: absolute;
-    top: 0;
-    left: 0;
     width: 100%;
     backface-visibility: hidden;
     border-radius:3px;
@@ -23,9 +20,14 @@
     }
     &--back{
       transform:rotateY(180deg);
-
       &-1{
         background-image: linear-gradient(to right bottom,$color-secondary-light,$color-secondary-dark);
+      }
+      &-2{
+        background-image: linear-gradient(to right bottom,$color-primary-light,$color-primary-dark);
+      }
+      &-3{
+        background-image: linear-gradient(to right bottom,$color-tertiary-light,$color-tertiary-dark);
       }
     }
   }
@@ -42,9 +44,18 @@
     background-size: cover;
     height: 23rem;
     background-blend-mode: screen;
+    clip-path: polygon(0 0 ,100% 0,100% 85%,0 100%);
     &--1{
       background-image: url(../img/nat-5.jpg),
       linear-gradient(to right bottom,$color-secondary-light,$color-secondary-dark);
+    }
+    &--2{
+      background-image: url(../img/nat-6.jpg),
+      linear-gradient(to right bottom,$color-primary-light,$color-primary-dark);
+    }
+    &--3{
+      background-image: url(../img/nat-7.jpg),
+      linear-gradient(to right bottom,$color-tertiary-light,$color-tertiary-dark);
     }
   }
 
@@ -69,10 +80,63 @@
       background-image: linear-gradient(to right bottom,
               rgba($color-secondary-light,.85),
               rgba($color-secondary-dark,.85));
-
-
-
+    }
+    &--2{
+      background-image: linear-gradient(to right bottom,
+              rgba($color-primary-light,.85),
+              rgba($color-primary-dark,.85));
+    }
+    &--3{
+      background-image: linear-gradient(to right bottom,
+              rgba($color-tertiary-light,.85),
+              rgba($color-tertiary-dark,.85));
     }
   }
+
+  &__details {
+    padding:3rem;
+
+    ul {
+      list-style-type: none;
+      width: 80%;
+      margin:0 auto;
+
+      li {
+        text-align: center;
+        font-size:1.5rem;
+        padding:1rem;
+
+        &:not(:last-child){
+          border-bottom: 1px solid $color-grey-light-2;
+        }
+      }
+    }
+  }
+
+  //FRONT SIDE STYLING
+  &__cta{
+    width:90%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform:translate(-50%,-50%);
+    text-align: center;
+  }
+
+  &__price-box{
+    text-align: center;
+    color:$color-white;
+    margin-bottom:8rem;
+  }
+
+  &__price-only{
+    font-size:1.6rem;
+  }
+
+  &__price-value{
+    font-size:6rem;
+    font-weight: 100;
+  }
+
 }
 
