--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -1,4 +1,5 @@
 .btn {
+  &,
   &:link,
   &:visited {
     font-size: $default-font-size;
@@ -9,6 +10,9 @@
     border-radius: 10rem;
     transition: all .2s;
     position: relative;
+
+    border:none;
+    cursor: pointer;
   }
 
   &::after {
@@ -24,7 +28,7 @@
     transition: all .4s;
   }
 
-  &:hover {
+  &:hover{
     transform: translateY(-0.3rem);
     box-shadow: 0 1rem 2rem rgba($color-black, 0.2);
 
@@ -34,7 +38,9 @@
     }
   }
 
-  &:active {
+  &:active,
+  &:focus {
+    outline:none;
     transform: translateY(-0.1rem);
     box-shadow: 0 0.5rem 1rem rgba($color-black, 0.2)
   }
