--- a/sass/components/_popup.scss
+++ b/sass/components/_popup.scss
@@ -6,6 +6,10 @@
   left: 0;
   z-index: 9999;
   background-color: rgba($color-black,.8);
+  opacity: 0;
+  visibility: hidden;
+  transition: all .3s;
+
   &__content{
     @include absCenter;
     width:75%;
@@ -14,6 +18,10 @@
     border-radius:3px;
     overflow: hidden;
     display:table;
+
+    opacity: 0;
+    transform: translate(-50%,-50%) scale(.5);
+    transition: all .5s .2s;
   }
 
   &__left{
@@ -30,16 +38,45 @@
 
   &__img{
     display:block;
-    width: 100%;
-    height: 100%;
+    width: 50%;
   }
   &__text{
     font-size:1.4rem;
     margin-bottom:4rem;
-
     column-count:2;
     column-gap:4rem;
     column-rule:1px solid $color-grey-light-2;
     hyphens: auto;
   }
+
+  &:target &__content{
+    opacity: 1;
+    transform: translate(-50%,-50%) scale(1);
+  }
+
+  &:target{
+    opacity: 1;
+    visibility: visible;
+  }
+
+  &__close{
+    &:link,
+    &:visited{
+      color:$color-grey-dark;
+      position: absolute;
+      top:2.5rem;
+      right: 2.5rem;
+      text-decoration: none;
+      font-size:3rem;
+      display: inline-block;
+      transition: all .2s;
+      line-height: 1;
+    }
+
+    &:hover,
+    &:active{
+      color:$color-primary;
+    }
+  }
+
 }
