增加响应式代码1

--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -7,7 +7,22 @@
 }
 //defines 1 rem
 html {
-  font-size: 62.5%;
+  //This defines what 1rem is
+  font-size: 62.5%;      //1 rem = 10px
+
+  @include respond(phone){
+    font-size:50%;       //1 rem = 8px
+  }
+  @include respond(tab-port){
+    font-size: 50%;      // 1rem = 8px
+  }
+  @include respond(tab-land){
+    font-size: 56.25%;   //  1rem = 9px
+  }
+  @include respond(big-desktop){
+    font-size:75%       //  1rem = 12px
+  }
+
 }
 
 body {
