--- a/sass/abstracts/_mixins.scss
+++ b/sass/abstracts/_mixins.scss
@@ -27,6 +27,8 @@ $breakpoint argument choices:
 - tab-land
 - big-desktop
 
+order:base + typography > general layout + grid > page layout > components
+
 1em = 16px;
 */
 
