--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -3,7 +3,6 @@ body {
   font-weight: 400;
   line-height: 1.7;
   color: #777;
-  padding: 30px;
 }
 
 
@@ -14,7 +13,6 @@ body {
   backface-visibility: hidden;
   margin-bottom: 6rem;
 
-
   &--main {
     display: block;
     font-size: 6rem;
@@ -24,6 +22,11 @@ body {
     animation-name: moveInLeft;
     animation-duration: 3s;
     animation-timing-function: ease-out;
+
+    @include respond(phone){
+      letter-spacing: 1rem;
+      font-size: 5rem;
+    }
     /*
     animation-iteration-count: 3;//动画重复
     animation-delay: 2s;//动画延迟
@@ -35,8 +38,12 @@ body {
     font-size: 2rem;
     font-weight: 700;
     letter-spacing: 1.7rem;
-
     animation: moveInRight 3s ease-out;
+
+
+    @include respond(phone){
+      letter-spacing: 0.5rem;
+    }
   }
 }
 
@@ -51,6 +58,12 @@ body {
   letter-spacing: 2px;
   transition:all .2s;
 
+  @include respond(tab-port){
+    font-size: 3rem;
+  }
+  @include respond(phone){
+    font-size: 2.5rem;
+  }
   &:hover {
     transform: skewY(2deg) skewX(15deg) scale(1.1);
     text-shadow:.5rem 1rem 2rem rgba($color-black, .2)
