--- a/sass/components/_composition.scss
+++ b/sass/components/_composition.scss
@@ -4,25 +4,46 @@ position: relative;
   &__photo {
     width:80%;
     box-shadow:0 1.5rem 4rem rgba($color-black,.4);
-    //border-radius:2px;
     position:absolute;
     z-index: 10;
     transition: all .2s;
     outline-offset: .5rem;
+    @include respond(tab-port) {
+      float: left;
+      position: relative;
+      width:33.333333%;
+      box-shadow:0 1.5rem 3rem rgba($color-black,.2);
+    }
 
     &--p1{
       left: 0;
       top: -2rem;
+
+      @include respond(tab-port) {
+        top:1rem;
+        transform: translate(1.2)
+      }
     }
 
     &--p2{
       right: 0;
       top: 2rem;
+
+      @include respond(tab-port) {
+        top:-1rem;
+        transform: translate(1.3)
+      }
     }
 
     &--p3{
       left:10%;
       top: 6rem;
+
+      @include respond(tab-port) {
+        top:1rem;
+        left: 0;
+        transform: translate(1.1)
+      }
     }
 
     &:hover{
